# node_normalizer/model/__init__.py
@@ -3,4 +3,12 @@ API Models not described in reasoner-pydantic
 """
 
 from .input import CurieList, SemanticTypesInput, SetIDQuery
-from .response import CuriePivot, SemanticTypes, ConflationList, SetIDResponse
+from .response import (
+    CuriePivot,
+    SemanticTypes,
+    ConflationList,
+    SetIDResponse,
+    EquivalentIdentifier,
+    NormalizedNodeId,
+    NormalizedNode,
+)
